<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:id="@+id/topArea"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_view">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_alignEnd="@+id/textView"
                android:layout_marginTop="-20dp"
                android:text="@string/mr"
                android:textColor="#84FFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodeText,TextContrastCheck"
                />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/icon_user"
                android:layout_marginStart="160dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/textView"
                />


        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="-80dp">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/facture"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/factures"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:id="@+id/announcement"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/announce" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/annonces"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:id="@+id/messageLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/messaging"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/messagerie"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/history"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/historique"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:id="@+id/planning"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/calendar"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/planning"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="15dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="12dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:id="@+id/proximite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/map"
                        android:layout_gravity="center_horizontal"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proximit"
                        android:layout_gravity="center_horizontal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_nav_menu"
            />
    </LinearLayout>


</ScrollView>






</LinearLayout>